CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT(compiladorEtapa1)
FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)
FLEX_TARGET(scanner scanner.l  ${CMAKE_CURRENT_BINARY_DIR}/lexer.c)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${compiladorEtapa1_SOURCE_DIR})
ADD_EXECUTABLE(main main.c ${FLEX_scanner_OUTPUTS})
TARGET_LINK_LIBRARIES(main ${FLEX_LIBRARIES})
